Fix blurry font on strongs

--- a/assets/scss/_normalize.scss
+++ b/assets/scss/_normalize.scss
@@ -46,11 +46,6 @@ a {
   background-color: transparent;
 }
 
-b,
-strong {
-  font-weight: bold;
-}
-
 small {
   font-size: 80%;
 }
